vlib/v/checker/tests/struct_ptr_cast_int_outside_unsafe_err.out
vlib/v/checker/tests/struct_ptr_cast_int_outside_unsafe_err.vv:7:5: warning: cannot cast a number to a type reference, use `nil` or a voidptr cast first: `&Type(voidptr(123))`
    5 | a := 1
    6 | 
    7 | _ = &Context(a)
      |     ~~~~~~~~~~~
    8 | _ = &Context(b)
    9 | _ = &Context(1)
vlib/v/checker/tests/struct_ptr_cast_int_outside_unsafe_err.vv:8:5: warning: cannot cast a number to a type reference, use `nil` or a voidptr cast first: `&Type(voidptr(123))`
    6 | 
    7 | _ = &Context(a)
    8 | _ = &Context(b)
      |     ~~~~~~~~~~~
    9 | _ = &Context(1)
vlib/v/checker/tests/struct_ptr_cast_int_outside_unsafe_err.vv:9:5: warning: cannot cast a number to a type reference, use `nil` or a voidptr cast first: `&Type(voidptr(123))`
    7 | _ = &Context(a)
    8 | _ = &Context(b)
    9 | _ = &Context(1)
      |     ~~~~~~~~~~~
vlib/v/checker/tests/struct_ptr_cast_int_outside_unsafe_err.vv:7:5: error: cannot cast int to a struct pointer outside `unsafe`
    5 | a := 1
    6 | 
    7 | _ = &Context(a)
      |     ~~~~~~~~~~~
    8 | _ = &Context(b)
    9 | _ = &Context(1)
vlib/v/checker/tests/struct_ptr_cast_int_outside_unsafe_err.vv:8:5: error: cannot cast int to a struct pointer outside `unsafe`
    6 | 
    7 | _ = &Context(a)
    8 | _ = &Context(b)
      |     ~~~~~~~~~~~
    9 | _ = &Context(1)
vlib/v/checker/tests/struct_ptr_cast_int_outside_unsafe_err.vv:9:5: error: cannot cast int to a struct pointer outside `unsafe`
    7 | _ = &Context(a)
    8 | _ = &Context(b)
    9 | _ = &Context(1)
      |     ~~~~~~~~~~~
